[gd_scene load_steps=2 format=3 uid="uid://cvlddpvtkopoe"]

[ext_resource type="Script" uid="uid://cr312emj2mdaj" path="res://scripts/PreparationPhase.gd" id="1_7hnmh"]

[node name="PreparationPhase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7hnmh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.15, 1)

[node name="PrepPanel" type="Panel" parent="."]
modulate = Color(0.8, 0.9, 1, 0.95)
self_modulate = Color(0.2, 0.3, 0.4, 0.9)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PrepPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 9.0
offset_right = 4.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PrepPanel/MarginContainer"]
layout_mode = 2

[node name="PhaseLabel" type="Label" parent="PrepPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "战前准备阶段"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="PrepPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="EnemyInfo" type="Label" parent="PrepPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="LoadoutContainer" type="VBoxContainer" parent="PrepPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="LoadoutScroll" type="ScrollContainer" parent="PrepPanel/MarginContainer/VBoxContainer/LoadoutContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadoutGrid" type="GridContainer" parent="PrepPanel/MarginContainer/VBoxContainer/LoadoutContainer/LoadoutScroll"]
layout_mode = 2
columns = 5

[node name="SelectedInfo" type="Label" parent="PrepPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="PrepPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "开始战斗"
